# gemini-server

./: .gitignore  GEMINI_SETUP.md  README.md  RUN_INSTRUCTIONS.md  SERVICE_README.md  dashboard.py  gemini_client_example.py  gemini_config.json.example  install_as_service.bat  install_service.bat  install_service_improved.bat  main.py  manage_service.bat  proxy_config.json  proxy_server.bat  proxy_server_admin.bat  pyproject.toml  start_app.bat  start_dashboard.bat  start_proxy.bat  start_proxy_admin.bat  uninstall_service.bat
pages/: 1_📊_Statistics.py  2_🤖_Gemini_Manager.py  3_📋_Logs_Viewer.py  4_⚙️_Settings.py
proxy/: __init__.py  config.py  forwarder.py  gemini_config.py  gemini_handler.py  gemini_usage_tracker.py  handler.py  logger.py  request_stats.py  server.py
proxy/tests/: __init__.py  test_forwarder.py  test_https.py
