[project]
name = "proxy-python"
version = "0.1.0"
description = "Simple Python Proxy Server"
requires-python = ">=3.9"
dependencies = [
    "pyinstaller>=6.15.0",
    "httpx>=0.27.0",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["proxy"]

